--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
-#kitty{
-    width: 100px;
-    height: 100px;
+#cat1{
+    width: 350px;
+    height: 600px;
     position: relative;
     top: 0;
     left: 0;
+}
+h1 {
+    text-align: center;
 }
