--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,21 @@
     position: relative;
     top: 0;
     left: 0;
-}
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: center;
+    }
+
+    img{
+        width:auto;
+        height: 500px;
+    }
+
 h1 {
     text-align: center;
 }
+body{
+    background-color: whitesmoke;
+}
+
