--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,25 @@
-#cat1{
-    width: 350px;
-    height: 600px;
-    position: relative;
-    top: 0;
-    left: 0;
-     display: flex;
-     flex-direction: row;
-     justify-content: space-between;
-     align-items: center;
+.cat1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;  
     }
 
-    img{
-        width:auto;
-        height: 500px;
+ img{
+     width:auto;
+    height: 600px;
     }
 
 h1 {
     text-align: center;
 }
+
+h3{
+    text-align: center;
+}
+
 body{
     background-color: whitesmoke;
 }
-
+#catwords{
+    text-align: center;
+}
